Implemented Planting Feature

--- a/backend/.env
+++ b/backend/.env
@@ -13,3 +13,4 @@ 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
 
 
 WEATHER_API_KEY=32305cc28ebf402c897112337251909 
+GEMINI_API_KEY=AIzaSyDzZw5dfarRri4Ere0s3u2NH9hq5iwcvU8
