some changes remaining

--- a/backend/.env
+++ b/backend/.env
@@ -11,6 +11,9 @@ GOOGLE_CLIENT_ID=23547526283-9pt3mgpshvhvd5jk8lu51cmd36hh0g8o.apps.googleusercon
 
 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
 
+CLOUDINARY_CLOUD_NAME=dpxx16svk
+CLOUDINARY_API_KEY=754176938224162
+CLOUDINARY_API_SECRET=PuahHKqrkKEqPxZ_p7kGBHx03Co
 
 WEATHER_API_KEY=32305cc28ebf402c897112337251909 
 GEMINI_API_KEY=AIzaSyDzZw5dfarRri4Ere0s3u2NH9hq5iwcvU8
